--- a/notebooks/data_cleaning.ipynb
+++ b/notebooks/data_cleaning.ipynb
@@ -9,29 +9,46 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trucks = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/trucks.csv')\n",
-    "df_truck_schedule = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/truck_schedule.csv')\n",
-    "df_traffic = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/traffic.csv')\n",
-    "df_routes_weather = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/routes_weather.csv')\n",
-    "df_routes = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/routes.csv')\n",
-    "df_drivers = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/drivers.csv')\n",
-    "df_city_weather = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/raw/city_weather.csv')"
+    "host = localhost\n",
+    "port = 5432\n",
+    "dbname = TruckDb\n",
+    "user = postgres\n",
+    "password = mysecretpassword"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine = create_engine(\n",
+    "    f\"postgresql://postgres:mysecretpassword@localhost:5432/TruckDb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_trucks = pd.read_sql_table('trucks_table', engine)\n",
+    "df_truck_schedule = pd.read_sql_table('truck_schedule_table', engine)\n",
+    "df_traffic = pd.read_sql_table('traffic_table', engine)\n",
+    "df_routes_weather = pd.read_sql_table('routes_weather', engine)\n",
+    "df_routes = pd.read_sql_table('routes_table', engine)\n",
+    "df_drivers = pd.read_sql_table('drivers_table', engine)\n",
+    "df_city_weather = pd.read_sql_table('city_weather', engine)"
    ]
   },
   {
@@ -43,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +336,7 @@
        "[55176 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1306,7 +1323,7 @@
    "outputs": [],
    "source": [
     "df_city_weather_cleaned = df_city_weather_cleaned.drop(\n",
-    "    columns=['chanceofrain', 'chanceoffog', 'chanceofsnow', 'chanceofthunder','precip','visibility'])"
+    "    columns=['chanceofrain', 'chanceoffog', 'chanceofsnow', 'chanceofthunder', 'precip', 'visibility'])"
    ]
   },
   {
@@ -2184,17 +2201,18 @@
    ],
    "source": [
     "\n",
-    "for column in ['age','experience']:\n",
-    "        Q1 = df_drivers[column].quantile(0.25)  # First quartile (25th percentile)\n",
-    "        Q3 = df_drivers[column].quantile(0.75)  # Third quartile (75th percentile)\n",
-    "        IQR = Q3 - Q1  # Interquartile range\n",
+    "for column in ['age', 'experience']:\n",
+    "    Q1 = df_drivers[column].quantile(0.25)  # First quartile (25th percentile)\n",
+    "    Q3 = df_drivers[column].quantile(0.75)  # Third quartile (75th percentile)\n",
+    "    IQR = Q3 - Q1  # Interquartile range\n",
     "\n",
-    "        # Define the bounds for outliers\n",
-    "        lower_bound = Q1 - 1.5 * IQR\n",
-    "        upper_bound = Q3 + 1.5 * IQR\n",
+    "    # Define the bounds for outliers\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "        # Remove outliers from the column\n",
-    "        df_drivers_cleaned = df_drivers[(df_drivers[column] >= lower_bound) & (df_drivers[column] <= upper_bound)]\n",
+    "    # Remove outliers from the column\n",
+    "    df_drivers_cleaned = df_drivers[(df_drivers[column] >= lower_bound) & (\n",
+    "        df_drivers[column] <= upper_bound)]\n",
     "\n",
     "# Display the cleaned dataframe\n",
     "df_drivers_cleaned"
@@ -2920,9 +2938,11 @@
     }
    ],
    "source": [
-    "mean_experience = df_drivers['experience'][df_drivers['experience'] >= 0].mean()\n",
-    "df_drivers['experience'] = df_drivers['experience'].apply(lambda x: mean_experience if x < 0 else x)\n",
-    "unique_values(df_drivers)\n"
+    "mean_experience = df_drivers['experience'][df_drivers['experience'] >= 0].mean(\n",
+    ")\n",
+    "df_drivers['experience'] = df_drivers['experience'].apply(\n",
+    "    lambda x: mean_experience if x < 0 else x)\n",
+    "unique_values(df_drivers)"
    ]
   },
   {
@@ -4825,7 +4845,8 @@
     }
    ],
    "source": [
-    "df_routes_weather_cleaned.drop(columns=['chanceofrain','chanceoffog','chanceofsnow','chanceofthunder','precip'])"
+    "df_routes_weather_cleaned.drop(\n",
+    "    columns=['chanceofrain', 'chanceoffog', 'chanceofsnow', 'chanceofthunder', 'precip'])"
    ]
   },
   {
@@ -4842,7 +4863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Traffic Table Cleaning"
+    "Traffic Table Cleaning\n"
    ]
   },
   {
@@ -5330,14 +5351,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_traffic_cleaned.to_csv('/Users/rammaruthi/Desktop/Truck/data/cleaned/df_traffic_cleaned.csv')"
+    "df_traffic_cleaned.to_csv(\n",
+    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_traffic_cleaned.csv')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "truck_schedule cleaning"
+    "truck_schedule cleaning\n"
    ]
   },
   {
@@ -5979,7 +6001,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_truck_schedule_cleaned.to_csv('/Users/rammaruthi/Desktop/Truck/data/cleaned/df_truck_schedule.csv')"
+    "df_truck_schedule_cleaned.to_csv(\n",
+    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_truck_schedule.csv')"
    ]
   },
   {
@@ -6371,7 +6394,7 @@
     }
    ],
    "source": [
-    "df_trucks = df_trucks.dropna(subset=['load_capacity_pounds','fuel_type'])\n",
+    "df_trucks = df_trucks.dropna(subset=['load_capacity_pounds', 'fuel_type'])\n",
     "df_trucks.isnull().sum()"
    ]
   },
@@ -6627,16 +6650,17 @@
    ],
    "source": [
     "for column in ['truck_age']:\n",
-    "        Q1 = df_trucks[column].quantile(0.25)  # First quartile (25th percentile)\n",
-    "        Q3 = df_trucks[column].quantile(0.75)  # Third quartile (75th percentile)\n",
-    "        IQR = Q3 - Q1  # Interquartile range\n",
+    "    Q1 = df_trucks[column].quantile(0.25)  # First quartile (25th percentile)\n",
+    "    Q3 = df_trucks[column].quantile(0.75)  # Third quartile (75th percentile)\n",
+    "    IQR = Q3 - Q1  # Interquartile range\n",
     "\n",
-    "        # Define the bounds for outliers\n",
-    "        lower_bound = Q1 - 1.5 * IQR\n",
-    "        upper_bound = Q3 + 1.5 * IQR\n",
+    "    # Define the bounds for outliers\n",
+    "    lower_bound = Q1 - 1.5 * IQR\n",
+    "    upper_bound = Q3 + 1.5 * IQR\n",
     "\n",
-    "        # Remove outliers from the column\n",
-    "        df_trucks_cleaned = df_trucks[(df_trucks[column] >= lower_bound) & (df_trucks[column] <= upper_bound)]\n",
+    "    # Remove outliers from the column\n",
+    "    df_trucks_cleaned = df_trucks[(df_trucks[column] >= lower_bound) & (\n",
+    "        df_trucks[column] <= upper_bound)]\n",
     "\n",
     "# Display the cleaned dataframe\n",
     "df_trucks_cleaned"
@@ -6801,7 +6825,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_trucks_cleaned.to_csv('/Users/rammaruthi/Desktop/Truck/data/cleaned/df_trucks_cleaned.csv')"
+    "df_trucks_cleaned.to_csv(\n",
+    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_trucks_cleaned.csv')"
    ]
   },
   {
