--- a/notebooks/feature_Store.ipynb
+++ b/notebooks/feature_Store.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,8 @@
     "import numpy as np\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from matplotlib import pyplot\n",
-    "import seaborn as sns\n"
+    "import seaborn as sns\n",
+    "from sqlalchemy import create_engine\n"
    ]
   },
   {
@@ -25,19 +26,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define version numbers for feature view and model\n",
-    "FV_VERSION = 1\n",
-    "MODEL_VERSION = 1\n",
-    "\n"
+    "engine = create_engine(\n",
+    "    f\"postgresql://postgres:mysecretpassword@localhost:5432/TruckDb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_trucks = pd.read_sql_table('trucks_table_cleaned', engine)\n",
+    "df_truck_schedule = pd.read_sql_table('truck_schedule_table_cleaned', engine)\n",
+    "df_traffic = pd.read_sql_table('traffic_table_cleaned', engine)\n",
+    "df_routes_weather = pd.read_sql_table('routes_weather_cleaned', engine)\n",
+    "df_routes = pd.read_sql_table('routes_table_cleaned', engine)\n",
+    "df_drivers = pd.read_sql_table('drivers_table_cleaned', engine)\n",
+    "df_city_weather = pd.read_sql_table('city_weather_cleaned', engine)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -69,28 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_trucks = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_trucks_cleaned.csv')\n",
-    "df_truck_schedule = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_truck_schedule_cleaned.csv')\n",
-    "df_traffic = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_traffic_cleaned.csv')\n",
-    "df_routes_weather = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_routes_weather_cleaned.csv')\n",
-    "df_routes = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_routes_cleaned.csv')\n",
-    "df_drivers = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_drivers_cleaned.csv')\n",
-    "df_city_weather = pd.read_csv(\n",
-    "    '/Users/rammaruthi/Desktop/Truck/data/cleaned/df_city_weather_cleaned.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +261,7 @@
        "[1201 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +460,7 @@
        "[1201 rows x 7 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -487,13 +479,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1203537\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1207627\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1515518c2c97481ba784c282f21b136c",
+       "model_id": "e3ed2b547ba144b9a56f7c2b73f913b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -516,10 +508,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x16400c0b0>, None)"
+       "(<hsfs.core.job.Job at 0x17fdf3800>, None)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +523,6 @@
     "    version=1,\n",
     "    description='Features from Dataset trucks',\n",
     "    primary_key=['index'],  # Set the primary keys for the dataset\n",
-    "    online_enabled=True,\n",
     "    event_time='event_date'\n",
     ")\n",
     "\n",
@@ -541,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -558,13 +549,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1202519\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1207628\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0f5c1f190143474b9f4d5ed45d1c4866",
+       "model_id": "4a8cd97c48c642b98354ab87200458bc",
        "version_major": 2,
        "version_minor": 0
       },
@@ -587,10 +578,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x16400dc70>, None)"
+       "(<hsfs.core.job.Job at 0x32ded3920>, None)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -629,13 +620,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1203538\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1206606\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70c754c70ad84d1b85acf72f22d11cb3",
+       "model_id": "70a411a94d534f418bfe006a11554e3f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -658,10 +649,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x16401f920>, None)"
+       "(<hsfs.core.job.Job at 0x17fdf3cb0>, None)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,23 +683,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-09-19 13:36:37,574 WARNING: FeatureGroupWarning: The ingested dataframe contains upper case letters in feature names: `['Date']`. Feature names are sanitized to lower case in the feature store.\n",
+      "2024-09-20 12:38:30,102 WARNING: FeatureGroupWarning: The ingested dataframe contains upper case letters in feature names: `['Date']`. Feature names are sanitized to lower case in the feature store.\n",
       "\n",
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1204556\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1205586\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9ef45aebb9a44906b2705f48c334b213",
+       "model_id": "6e0c3db4963342369be8078ff6fa3d27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -731,10 +722,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x163eebcb0>, None)"
+       "(<hsfs.core.job.Job at 0x17d9ec620>, None)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -765,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -773,13 +764,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1202520\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1205587\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e7e688edcbf4e0e92a962d5b8f9b6e4",
+       "model_id": "78bc54ed88e24fdd810d9265591bf8f7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -802,10 +793,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x163edb980>, None)"
+       "(<hsfs.core.job.Job at 0x17fdf2840>, None)"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -844,13 +835,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1203547\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1207629\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6e897001c02c4112a957affe6145e614",
+       "model_id": "e93996f8c7ac41a496daad258c03ee47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -873,10 +864,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x163f771d0>, None)"
+       "(<hsfs.core.job.Job at 0x17fdf3e00>, None)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -907,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -915,13 +906,13 @@
      "output_type": "stream",
      "text": [
       "Feature Group created successfully, explore it at \n",
-      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1202535\n"
+      "https://c.app.hopsworks.ai:443/p/1043609/fs/1035336/fg/1206607\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6897e614ac394c11a72ea9405faf7fca",
+       "model_id": "6c70a3621d7d49e0a0b4b23b09fa7e1a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -944,10 +935,10 @@
     {
      "data": {
       "text/plain": [
-       "(<hsfs.core.job.Job at 0x16400fd10>, None)"
+       "(<hsfs.core.job.Job at 0x35d554770>, None)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
